no qc pass: swipe with aes256gcm
no qc pass: swipe with aes192gcm
no qc pass: swipe with aes128gcm
no qc pass: skip with aes256gcm
no qc pass: skip with aes192gcm
no qc pass: skip with aes128gcm
no qc pass: satp with aes256gcm
no qc pass: satp with aes192gcm
no qc pass: satp with aes128gcm
no qc pass: openvpn with aes256gcm
no qc pass: openvpn with aes192gcm
no qc pass: openvpn with aes128gcm
no qc pass: macsec with aes256gcm
no qc pass: macsec with aes192gcm
no qc pass: macsec with aes128gcm
no qc pass: inlsp with aes256gcm
no qc pass: inlsp with aes192gcm
no qc pass: inlsp with aes128gcm
qc pass: inlsp with none encryption
qc pass: inlsp with none hash
qc pass: macsec with none encryption
qc pass: macsec with none hash
qc pass: openvpn with none encryption
qc pass: openvpn with none hash
qc pass: satp with none encryption
qc pass: satp with none hash
qc pass: skip with none encryption
qc pass: skip with none hash
qc pass: swipe with none encryption
qc pass: swipe with none hash
---------------------------------- 2022-01-30 08:49:57
qc pass: p4lang: openvpn with none encryption
qc pass: p4lang: openvpn with none hash
qc pass: p4lang: macsec with none encryption
qc pass: p4lang: macsec with none hash
---------------------------------- 2022-01-30 14:39:53
qc pass: macsec with aes128gcm and hash
qc pass: macsec with aes192gcm and hash
qc pass: macsec with aes256gcm and hash
qc pass: macsec with aes128gcm and aead
qc pass: macsec with aes192gcm and aead
qc pass: macsec with aes256gcm and aead
---------------------------------- 2022-01-30 14:48:15
qc pass: p4lang: macsec with aes128gcm and hash
qc pass: p4lang: macsec with aes192gcm and hash
qc pass: p4lang: macsec with aes256gcm and hash
qc pass: p4lang: macsec with aes128gcm and aead
qc pass: p4lang: macsec with aes192gcm and aead
qc pass: p4lang: macsec with aes256gcm and aead
---------------------------------- 2022-02-03 07:55:32
todo: p4dpdk multiseg rx/tx loop