@@ -1,6 +1,6 @@
 url;file;result;test
--;-;-;freeRouter v22.2.4-cur, done by cs@nop.
--;-;-;2022-02-04 12:30:57, took 00:09:26, with 100 workers, on 2654 cases, 0 failed, 0 traces, 8 retries
+-;-;-;freeRouter v22.2.5-cur, done by cs@nop.
+-;-;-;2022-02-05 03:10:00, took 00:06:47, with 100 workers, on 2656 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin
 http://sources.nop.hu/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.nop.hu/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
@@ -31,7 +31,9 @@ http://sources.nop.hu/cfg/conn-bridge10.tst;conn-bridge10.tst;success;bridge wit
 http://sources.nop.hu/cfg/conn-bridge11.tst;conn-bridge11.tst;success;bridged ethernet over bridge
 http://sources.nop.hu/cfg/conn-bridge12.tst;conn-bridge12.tst;success;bridge split horizon
 http://sources.nop.hu/cfg/conn-bridge13.tst;conn-bridge13.tst;success;bridge mac learning
-http://sources.nop.hu/cfg/conn-bridge14.tst;conn-bridge14.tst;success;bridged mac rewrite
+http://sources.nop.hu/cfg/conn-bridge14.tst;conn-bridge14.tst;success;bridge mac rewrite
+http://sources.nop.hu/cfg/conn-bridge15.tst;conn-bridge15.tst;success;bridge port security
+http://sources.nop.hu/cfg/conn-bridge16.tst;conn-bridge16.tst;success;bridge static address
 http://sources.nop.hu/cfg/conn-bstun.tst;conn-bstun.tst;success;ppp over bstun
 http://sources.nop.hu/cfg/conn-bundle01.tst;conn-bundle01.tst;success;bundle of ethernet port
 http://sources.nop.hu/cfg/conn-bundle02.tst;conn-bundle02.tst;success;bundle of serial port
