@@ -10,8 +10,8 @@
  :active { color: white }
 </style>
 <title>tester</title></head><body>
-release: freeRouter v22.2.4-cur, done by cs@nop.<br/>
-tested: 2022-02-04 12:30:57, took 00:09:26, with 100 workers, on 2654 cases, 0 failed, 0 traces, 8 retries<br/>
+release: freeRouter v22.2.5-cur, done by cs@nop.<br/>
+tested: 2022-02-05 03:10:00, took 00:06:47, with 100 workers, on 2656 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -44,7 +44,9 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-bridge11.tst">conn-bridge11.tst</a></td><td>success</td><td>bridged ethernet over bridge</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-bridge12.tst">conn-bridge12.tst</a></td><td>success</td><td>bridge split horizon</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-bridge13.tst">conn-bridge13.tst</a></td><td>success</td><td>bridge mac learning</td></tr>
-<tr><td><a href="http://sources.nop.hu/cfg/conn-bridge14.tst">conn-bridge14.tst</a></td><td>success</td><td>bridged mac rewrite</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/conn-bridge14.tst">conn-bridge14.tst</a></td><td>success</td><td>bridge mac rewrite</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/conn-bridge15.tst">conn-bridge15.tst</a></td><td>success</td><td>bridge port security</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/conn-bridge16.tst">conn-bridge16.tst</a></td><td>success</td><td>bridge static address</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-bstun.tst">conn-bstun.tst</a></td><td>success</td><td>ppp over bstun</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-bundle01.tst">conn-bundle01.tst</a></td><td>success</td><td>bundle of ethernet port</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-bundle02.tst">conn-bundle02.tst</a></td><td>success</td><td>bundle of serial port</td></tr>
